Some more sbt stuff